--- a/css/game.css
+++ b/css/game.css
@@ -9,7 +9,24 @@ main {
     justify-content: center;
     padding: 20px 20px 50px;
   }
+
+  h1 {
+    margin-bottom: 50px;
+  }
   
+  .login__button {
+    background-color: #00b5cc;
+    /* border: 3px solid #b2df28; */
+    border-radius: 8px;
+    color: #fff;
+    cursor: pointer;
+    font-size: 1em;
+    max-width: 100px;
+    padding: 5px;
+    width: 100%;
+  }
+  
+
   header {
     display: flex;
     align-items: center;
